--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
 </head>
 <body class="login-body">
 
-<div class="login-box">
-    <h2>Benvenuto</h2>
-    <p>Inserisci la password per entrare</p>
-    <input type="password" id="pwd" placeholder="Password">
-    <button onclick="login()">Entra</button>
-    <p id="error"></p>
+<div class="login-container">
+    <div class="login-box">
+        <h1 class="login-title">🌍 Benvenuto Viaggiatore</h1>
+        <p class="login-subtitle">Accedi al tuo mondo di avventure</p>
+
+        <div class="input-group">
+            <span class="input-icon">🔒</span>
+            <input type="password" id="pwd" placeholder="Inserisci la password">
+        </div>
+
+        <button class="login-btn" onclick="login()">Entra</button>
+        <p id="error" class="error-text"></p>
+    </div>
 </div>
 
 <script src="auth.js"></script>
