--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="login-body">
+<img src="img/airplane.png" class="airplane">
 
 <div class="login-container">
     <div class="login-box">
@@ -24,5 +25,16 @@
 </div>
 
 <script src="auth.js"></script>
+<script>
+for (let i = 0; i < 25; i++) {
+    const p = document.createElement("div");
+    p.classList.add("particle");
+    p.style.left = Math.random() * 100 + "vw";
+    p.style.top = Math.random() * 100 + "vh";
+    p.style.animationDelay = Math.random() * 5 + "s";
+    document.body.appendChild(p);
+}
+</script>
+
 </body>
 </html>
