--- a/mappa.html
+++ b/mappa.html
@@ -4,37 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mappa</title>
-    <link rel="stylesheet" href="style.css">
 
-    <!-- Leaflet -->
+    <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+    <link rel="stylesheet" href="mappa.css">
 </head>
-<body>
 
-<nav class="topnav">
-    <a href="home.html">Home</a>
-    <a href="destinazioni.html">Destinazioni</a>
-    <a href="gallery.html">Galleria</a>
-    <a href="mappa.html">Mappa</a>
-    <a href="diario.html">Diario</a>
-</nav>
+<body class="map-body">
 
-<h2 class="title">Mappa dei miei viaggi</h2>
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <div class="nav-logo">🌍 TravelApp</div>
+        <ul class="nav-links">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="destinazioni.html">Destinazioni</a></li>
+            <li><a href="galleria.html">Galleria</a></li>
+            <li><a href="mappa.html" class="active">Mappa</a></li>
+            <li><a href="diario.html">Diario</a></li>
+        </ul>
+    </nav>
 
-<div id="map"></div>
+    <!-- MAPPA -->
+    <div id="map"></div>
 
-<script>
-const map = L.map('map').setView([48.8566, 2.3522], 4);
+    <!-- Leaflet JS -->
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 18
-}).addTo(map);
-
-// Esempio marker
-L.marker([48.8566, 2.3522]).addTo(map).bindPopup("Parigi");
-L.marker([35.6762, 139.6503]).addTo(map).bindPopup("Tokyo");
-</script>
+    <!-- SCRIPT MAPPA -->
+    <script src="mappa.js"></script>
 
 </body>
 </html>
