footer and maps html e css

--- a/destinazioni.html
+++ b/destinazioni.html
@@ -63,6 +63,36 @@
         </div>
 
     </section>
+    <footer class="footer">
+        <div class="footer-content">
+
+            <div class="footer-section">
+                <h3>🌍 TravelApp</h3>
+                <p>Esplora il mondo, un viaggio alla volta.</p>
+            </div>
+
+            <div class="footer-section">
+                <h4>Navigazione</h4>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="destinazioni.html">Destinazioni</a></li>
+                    <li><a href="galleria.html">Galleria</a></li>
+                    <li><a href="mappa.html">Mappa</a></li>
+                    <li><a href="diario.html">Diario</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                
+                <p>📍 Italia</p>
+            </div>
+
+        </div>
+
+        <div class="footer-bottom">
+            © 2025 TravelApp — Creato da Gian
+        </div>
+    </footer>
 
 </body>
 </html>
