--- a/mappa.html
+++ b/mappa.html
@@ -12,6 +12,10 @@
 </head>
 
 <body class="map-body">
+    <div class="search-box">
+        <input type="text" id="searchInput" placeholder="Cerca una città...">
+        <button id="searchBtn">🔍</button>
+    </div>
 
     <!-- NAVBAR -->
     <nav class="navbar">
