--- a/mappa.html
+++ b/mappa.html
@@ -13,9 +13,11 @@
 
 <body class="map-body">
     <div class="search-box">
-        <input type="text" id="searchInput" placeholder="Cerca una città...">
-        <button id="searchBtn">🔍</button>
-    </div>
+    <input type="text" id="startInput" placeholder="Partenza...">
+    <input type="text" id="endInput" placeholder="Destinazione...">
+    <button id="routeBtn">Calcola rotta</button>
+</div>
+
 
     <!-- NAVBAR -->
     <nav class="navbar">
