--- a/destinazioni.html
+++ b/destinazioni.html
@@ -29,34 +29,9 @@
     <section class="dest-grid">
 
         <div class="dest-card">
-            <img src="img/parigi.jpg" alt="Parigi">
+            <img src="img/london.jpg" alt="London">
             <div class="dest-info">
-                <h3>Parigi</h3>
-                <p>La città dell’amore, tra arte e magia.</p>
-            </div>
-        </div>
-
-        <div class="dest-card">
-            <img src="img/tokyo.jpg" alt="Tokyo">
-            <div class="dest-info">
-                <h3>Tokyo</h3>
-                <p>Tradizione e futuro in un’unica metropoli.</p>
-            </div>
-        </div>
-
-        <div class="dest-card">
-            <img src="img/newyork.jpg" alt="New York">
-            <div class="dest-info">
-                <h3>New York</h3>
-                <p>La città che non dorme mai.</p>
-            </div>
-        </div>
-
-        <div class="dest-card">
-            <img src="img/maldive.jpg" alt="Maldive">
-            <div class="dest-info">
-                <h3>Maldive</h3>
-                <p>Acque cristalline e relax assoluto.</p>
+                <h3>Londra</h3>
             </div>
         </div>
 
