--- a/destinazioni.html
+++ b/destinazioni.html
@@ -29,7 +29,7 @@
     <section class="dest-grid">
 
         <div class="dest-card">
-            <img src="img/london.jpg" alt="London">
+            <img src="img/london.png" alt="London">
             <div class="dest-info">
                 <h3>Londra</h3>
             </div>
