--- a/mappa/mappa.html
+++ b/mappa/mappa.html
@@ -23,8 +23,8 @@
     <nav class="navbar">
         <div class="nav-logo">🌍 TravelApp</div>
         <ul class="nav-links">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="destinazioni.html">Destinazioni</a></li>
+            <li><a href="../home/home.html">Home</a></li>
+            <li><a href="../destinazioni/destinazioni.html">Destinazioni</a></li>
             <li><a href="mappa.html" class="active">Mappa</a></li>
         </ul>
     </nav>
