--- a/home/home.html
+++ b/home/home.html
@@ -14,8 +14,8 @@
         <div class="nav-logo">🌍 TravelApp</div>
         <ul class="nav-links">
             <li><a href="home.html" class="active">Home</a></li>
-            <li><a href="../destinazioni/destinazioni.html">Destinazioni</a></li>
-            <li><a href="../mappa/mappa.html">Mappa</a></li>
+            <li><a href="destinazioni.html">Destinazioni</a></li>
+            <li><a href="mappa.html">Mappa</a></li>
         </ul>
     </nav>
 
@@ -23,7 +23,7 @@
     <header class="hero">
         <h1 class="hero-title">🌍 I miei viaggi</h1>
         <p class="hero-subtitle">Esplora il mondo con me</p>
-        <a href="../destinazioni/destinazioni.html" class="hero-btn">Inizia il viaggio</a>
+        <a href="destinazioni.html" class="hero-btn">Inizia il viaggio</a>
     </header>
 
 </body>
