--- a/destinazioni/destinazioni.html
+++ b/destinazioni/destinazioni.html
@@ -13,9 +13,9 @@
     <nav class="navbar">
         <div class="nav-logo">🌍 TravelApp</div>
         <ul class="nav-links">
-            <li><a href="../home/home.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="destinazioni.html" class="active">Destinazioni</a></li>
-            <li><a href="../mappa/mappa.html">Mappa</a></li>
+            <li><a href="mappa.html">Mappa</a></li>
         </ul>
     </nav>
 
