--- a/destinazioni.html
+++ b/destinazioni.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destinazioni</title>
     <link rel="stylesheet" href="destinazioni.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 
 <body class="dest-body">
