--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I miei viaggi</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 
 <body class="home-body">
