--- a/mappa.html
+++ b/mappa.html
@@ -7,7 +7,7 @@
 
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
-
+    <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="mappa.css">
 </head>
 
