--- a/destinazioni.html
+++ b/destinazioni.html
@@ -29,12 +29,13 @@
     <!-- GRID DESTINAZIONI -->
     <section class="dest-grid">
 
-        <div class="dest-card">
+        <a href="londra.html" class="dest-card">
             <img src="img/london.png" alt="London">
             <div class="dest-info">
                 <h3>Londra</h3>
             </div>
-        </div>
+        </a>
+
 
     </section>
 
