--- a/destinazioni.html
+++ b/destinazioni.html
@@ -29,7 +29,7 @@
     <!-- GRID DESTINAZIONI -->
     <section class="dest-grid">
 
-        <a href="londra.html" class="dest-card">
+        <a href="destinazioni/london.html" class="dest-card">
             <img src="img/london.png" alt="London">
             <div class="dest-info">
                 <h3>Londra</h3>
