--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -6,7 +6,7 @@
     <title>Londra – Itinerario</title>
 
     <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="londra.css">
+    <link rel="stylesheet" href="london.css">
 </head>
 
 <body class="londra-body">
