--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -30,22 +30,140 @@
     <!-- CONTENUTO -->
     <section class="londra-content">
 
+        <!-- GIORNO 1 -->
         <div class="day-box">
-            <h2>📅 Giorno 1 – Westminster & Big Ben</h2>
-            <p>Big Ben, Parlamento, Westminster Abbey e passeggiata lungo il Tamigi.</p>
+            <h2>✈️ Giorno 1 – Arrivo + Notting Hill + Kensington + South Bank</h2>
+
+            <p><strong>13:30 – Arrivo a Gatwick North</strong><br>
+            Uscita dall’aeroporto: 14:15–14:30</p>
+
+            <p><strong>14:30 – Trasferimento verso Londra</strong><br>
+            Gatwick Express → Victoria (30 min) – <span class="price">£20–25</span><br>
+            Thameslink → London Bridge/Blackfriars (35–40 min) – <span class="price">£10–13</span></p>
+
+            <p><strong>15:30–16:00 – Arrivo al Pembridge Palace Hotel + check‑in</strong></p>
+
+            <p><strong>16:00 – Notting Hill</strong><br>
+            Passeggiata tra Portobello Road, case colorate, boutique<br>
+            Costo: <span class="free">gratis</span></p>
+
+            <p><strong>17:00 – Kensington Gardens</strong><br>
+            Kensington Palace (esterno), Round Pond<br>
+            Costo: <span class="free">gratis</span></p>
+
+            <p><strong>18:30 – Cena in zona Kensington/Bayswater</strong><br>
+            Dishoom Kensington (<span class="price">£20–30</span>)<br>
+            Churchill Arms (<span class="price">£15–25</span>)<br>
+            Maggie Jones’s (<span class="price">£25–35</span>)</p>
+
+            <p><strong>20:15 – South Bank serale</strong><br>
+            Westminster Bridge → London Eye → lungofiume<br>
+            Costo: <span class="free">gratis</span></p>
+
+            <p><strong>22:00 – Rientro in hotel</strong></p>
         </div>
 
+        <!-- GIORNO 2 -->
         <div class="day-box">
-            <h2>📅 Giorno 2 – Buckingham Palace & Hyde Park</h2>
-            <p>Cambio della guardia, parco, e pomeriggio a Piccadilly.</p>
+            <h2>🇬🇧 Giorno 2 – Big Ben + Buckingham + Soho + Chinatown + Canary Wharf</h2>
+
+            <p><strong>09:00 – Big Ben & Westminster</strong><br>
+            Metro: Notting Hill Gate → Westminster – <span class="price">£2.80</span></p>
+
+            <p><strong>10:00 – St. James’s Park</strong></p>
+
+            <p><strong>10:30 – Buckingham Palace</strong><br>
+            Cambio della Guardia (se previsto alle 11:00)<br>
+            Costo: <span class="free">gratis</span></p>
+
+            <p><strong>12:00 – Pranzo a Soho</strong><br>
+            Dishoom Carnaby (<span class="price">£20–30</span>)<br>
+            Flat Iron (<span class="price">£15–20</span>)<br>
+            Bao (<span class="price">£15–25</span>)</p>
+
+            <p><strong>13:00 – Soho</strong><br>
+            Passeggiata tra negozi, vie iconiche<br>
+            Costo: <span class="free">gratis</span></p>
+
+            <p><strong>14:00 – Piccadilly Circus</strong></p>
+
+            <p><strong>14:30 – Chinatown</strong><br>
+            Bubble tea, bakery asiatiche – <span class="price">£5–10</span></p>
+
+            <p><strong>16:00 – Canary Wharf</strong><br>
+            Jubilee Line – <span class="price">£2.80</span><br>
+            Cosa vedere: Crossrail Place Roof Garden, Docks, Canada Square</p>
+
+            <p><strong>19:00 – Cena</strong><br>
+            Costo: <span class="price">£15–30</span></p>
+
+            <p><strong>21:00 – Passeggiata serale o rientro</strong></p>
         </div>
 
+        <!-- GIORNO 3 -->
         <div class="day-box">
-            <h2>📅 Giorno 3 – Tower Bridge & City</h2>
-            <p>Tower of London, Tower Bridge, e giro serale a Soho.</p>
+            <h2>🧙‍♂️ Giorno 3 – Madame Tussauds + Natural History Museum + Harry Potter Studios</h2>
+
+            <p><strong>09:00 – Madame Tussauds</strong><br>
+            Metro: Queensway/Bayswater → Baker Street<br>
+            Prezzo: <span class="price">£35–45</span><br>
+            Durata: 1h30–2h</p>
+
+            <p><strong>11:00 – Spostamento verso South Kensington</strong><br>
+            Circle Line – <span class="price">£2.80</span></p>
+
+            <p><strong>11:30 – Natural History Museum</strong><br>
+            Prezzo: <span class="free">gratis</span><br>
+            Durata: 1h30</p>
+
+            <p><strong>13:00 – Pranzo</strong><br>
+            Pret / Honest Burgers / Muriel’s Kitchen – <span class="price">£10–20</span></p>
+
+            <p><strong>14:00 – Partenza per gli Studios</strong><br>
+            Metro South Kensington → Euston<br>
+            Treno Euston → Watford Junction – <span class="price">£12–15 A/R</span><br>
+            Shuttle bus ufficiale – <span class="price">£3 A/R</span><br>
+            Arrivo previsto: 15:30–15:45</p>
+
+            <p><strong>16:00 – Harry Potter Studios</strong><br>
+            Prezzo: <span class="price">£53–60</span><br>
+            Durata: 3–4 ore</p>
+
+            <p><strong>20:00 – Rientro a Londra</strong><br>
+            Arrivo: 21:00–21:30</p>
+        </div>
+
+        <!-- GIORNO 4 -->
+        <div class="day-box">
+            <h2>🎸 Giorno 4 – Camden + Primrose Hill + ritorno</h2>
+
+            <p><strong>09:30 – Camden Town</strong><br>
+            Metro: Notting Hill Gate → Camden Town – <span class="price">£2.80</span><br>
+            Camden Market, Stables Market, Camden Lock<br>
+            Costo: <span class="free">gratis</span> (street food <span class="price">£8–12</span>)</p>
+
+            <p><strong>12:00 – Primrose Hill</strong><br>
+            Vista panoramica su Londra<br>
+            Costo: <span class="free">gratis</span></p>
+
+            <p><strong>13:00 – Pranzo</strong><br>
+            Greenberry Café (<span class="price">£15–25</span>)<br>
+            The Engineer (<span class="price">£15–25</span>)<br>
+            Street food (<span class="price">£8–12</span>)</p>
+
+            <p><strong>14:00 – Rientro in hotel</strong><br>
+            Recupero bagagli</p>
+
+            <p><strong>15:30–16:00 – Partenza verso Gatwick</strong><br>
+            Victoria → Gatwick Express – <span class="price">£20–25</span><br>
+            Thameslink – <span class="price">£10–13</span></p>
+
+            <p><strong>16:30–17:00 – Arrivo in aeroporto</strong><br>
+            Perfetto per un volo delle 19:00</p>
         </div>
 
     </section>
+
 
 </body>
 </html>
