--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Londra – Itinerario</title>
 
-    <link rel="stylesheet" href="../navbar.css">
-    <link rel="stylesheet" href="london.css">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="londra.css">
 </head>
 
 <body class="londra-body">
@@ -27,143 +27,322 @@
         <p class="londra-subtitle">Itinerario completo nella capitale britannica</p>
     </header>
 
+    <!-- INDICE GIORNI -->
+    <div class="londra-index">
+        <a href="#day1">Giorno 1</a>
+        <a href="#day2">Giorno 2</a>
+        <a href="#day3">Giorno 3</a>
+        <a href="#day4">Giorno 4</a>
+    </div>
+
     <!-- CONTENUTO -->
     <section class="londra-content">
 
-        <!-- GIORNO 1 -->
-        <div class="day-box">
+        <!-- ===========================
+             GIORNO 1
+        ============================ -->
+        <div class="day-box" id="day1">
             <h2>✈️ Giorno 1 – Arrivo + Notting Hill + Kensington + South Bank</h2>
 
-            <p><strong>13:30 – Arrivo a Gatwick North</strong><br>
-            Uscita dall’aeroporto: 14:15–14:30</p>
+            <div class="timeline">
 
-            <p><strong>14:30 – Trasferimento verso Londra</strong><br>
-            Gatwick Express → Victoria (30 min) – <span class="price">£20–25</span><br>
-            Thameslink → London Bridge/Blackfriars (35–40 min) – <span class="price">£10–13</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">13:30</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Arrivo a Gatwick North</h3>
+                        <p>Uscita dall’aeroporto: 14:15–14:30</p>
+                    </div>
+                </div>
 
-            <p><strong>15:30–16:00 – Arrivo al Pembridge Palace Hotel + check‑in</strong></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">14:30</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Trasferimento verso Londra</h3>
+                        <p>Gatwick Express → Victoria (30 min) – <span class="price">£20–25</span><br>
+                        Thameslink → London Bridge/Blackfriars (35–40 min) – <span class="price">£10–13</span></p>
+                    </div>
+                </div>
 
-            <p><strong>16:00 – Notting Hill</strong><br>
-            Passeggiata tra Portobello Road, case colorate, boutique<br>
-            Costo: <span class="free">gratis</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">16:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Notting Hill</h3>
+                        <p>Passeggiata tra Portobello Road, case colorate, boutique<br>
+                        Costo: <span class="free">gratis</span></p>
+                    </div>
+                </div>
 
-            <p><strong>17:00 – Kensington Gardens</strong><br>
-            Kensington Palace (esterno), Round Pond<br>
-            Costo: <span class="free">gratis</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">17:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Kensington Gardens</h3>
+                        <p>Kensington Palace (esterno), Round Pond<br>
+                        Costo: <span class="free">gratis</span></p>
+                    </div>
+                </div>
 
-            <p><strong>18:30 – Cena in zona Kensington/Bayswater</strong><br>
-            Dishoom Kensington (<span class="price">£20–30</span>)<br>
-            Churchill Arms (<span class="price">£15–25</span>)<br>
-            Maggie Jones’s (<span class="price">£25–35</span>)</p>
+                <div class="timeline-item">
+                    <div class="timeline-time">18:30</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Cena in zona Kensington/Bayswater</h3>
+                        <p>Dishoom Kensington (<span class="price">£20–30</span>)<br>
+                        Churchill Arms (<span class="price">£15–25</span>)<br>
+                        Maggie Jones’s (<span class="price">£25–35</span>)</p>
+                    </div>
+                </div>
 
-            <p><strong>20:15 – South Bank serale</strong><br>
-            Westminster Bridge → London Eye → lungofiume<br>
-            Costo: <span class="free">gratis</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">20:15</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>South Bank serale</h3>
+                        <p>Westminster Bridge → London Eye → lungofiume<br>
+                        Costo: <span class="free">gratis</span></p>
+                    </div>
+                </div>
 
-            <p><strong>22:00 – Rientro in hotel</strong></p>
+            </div>
         </div>
 
-        <!-- GIORNO 2 -->
-        <div class="day-box">
+        <!-- ===========================
+             GIORNO 2
+        ============================ -->
+        <div class="day-box" id="day2">
             <h2>🇬🇧 Giorno 2 – Big Ben + Buckingham + Soho + Chinatown + Canary Wharf</h2>
 
-            <p><strong>09:00 – Big Ben & Westminster</strong><br>
-            Metro: Notting Hill Gate → Westminster – <span class="price">£2.80</span></p>
+            <div class="timeline">
 
-            <p><strong>10:00 – St. James’s Park</strong></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">09:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Big Ben & Westminster</h3>
+                        <p>Metro: Notting Hill Gate → Westminster – <span class="price">£2.80</span></p>
+                    </div>
+                </div>
 
-            <p><strong>10:30 – Buckingham Palace</strong><br>
-            Cambio della Guardia (se previsto alle 11:00)<br>
-            Costo: <span class="free">gratis</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">10:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>St. James’s Park</h3>
+                        <p>Passeggiata nel parco</p>
+                    </div>
+                </div>
 
-            <p><strong>12:00 – Pranzo a Soho</strong><br>
-            Dishoom Carnaby (<span class="price">£20–30</span>)<br>
-            Flat Iron (<span class="price">£15–20</span>)<br>
-            Bao (<span class="price">£15–25</span>)</p>
+                <div class="timeline-item">
+                    <div class="timeline-time">10:30</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Buckingham Palace</h3>
+                        <p>Cambio della Guardia (se previsto alle 11:00)<br>
+                        Costo: <span class="free">gratis</span></p>
+                    </div>
+                </div>
 
-            <p><strong>13:00 – Soho</strong><br>
-            Passeggiata tra negozi, vie iconiche<br>
-            Costo: <span class="free">gratis</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">12:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Pranzo a Soho</h3>
+                        <p>Dishoom Carnaby (<span class="price">£20–30</span>)<br>
+                        Flat Iron (<span class="price">£15–20</span>)<br>
+                        Bao (<span class="price">£15–25</span>)</p>
+                    </div>
+                </div>
 
-            <p><strong>14:00 – Piccadilly Circus</strong></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">13:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Soho</h3>
+                        <p>Passeggiata tra negozi e vie iconiche<br>
+                        Costo: <span class="free">gratis</span></p>
+                    </div>
+                </div>
 
-            <p><strong>14:30 – Chinatown</strong><br>
-            Bubble tea, bakery asiatiche – <span class="price">£5–10</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">14:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Piccadilly Circus</h3>
+                        <p>Foto e passeggiata</p>
+                    </div>
+                </div>
 
-            <p><strong>16:00 – Canary Wharf</strong><br>
-            Jubilee Line – <span class="price">£2.80</span><br>
-            Cosa vedere: Crossrail Place Roof Garden, Docks, Canada Square</p>
+                <div class="timeline-item">
+                    <div class="timeline-time">14:30</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Chinatown</h3>
+                        <p>Bubble tea, bakery asiatiche – <span class="price">£5–10</span></p>
+                    </div>
+                </div>
 
-            <p><strong>19:00 – Cena</strong><br>
-            Costo: <span class="price">£15–30</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">16:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Canary Wharf</h3>
+                        <p>Jubilee Line – <span class="price">£2.80</span><br>
+                        Crossrail Place Roof Garden, Docks, Canada Square</p>
+                    </div>
+                </div>
 
-            <p><strong>21:00 – Passeggiata serale o rientro</strong></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">19:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Cena</h3>
+                        <p>Costo: <span class="price">£15–30</span></p>
+                    </div>
+                </div>
+
+            </div>
         </div>
 
-        <!-- GIORNO 3 -->
-        <div class="day-box">
+        <!-- ===========================
+             GIORNO 3
+        ============================ -->
+        <div class="day-box" id="day3">
             <h2>🧙‍♂️ Giorno 3 – Madame Tussauds + Natural History Museum + Harry Potter Studios</h2>
 
-            <p><strong>09:00 – Madame Tussauds</strong><br>
-            Metro: Queensway/Bayswater → Baker Street<br>
-            Prezzo: <span class="price">£35–45</span><br>
-            Durata: 1h30–2h</p>
+            <div class="timeline">
 
-            <p><strong>11:00 – Spostamento verso South Kensington</strong><br>
-            Circle Line – <span class="price">£2.80</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">09:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Madame Tussauds</h3>
+                        <p>Prezzo: <span class="price">£35–45</span><br>
+                        Durata: 1h30–2h</p>
+                    </div>
+                </div>
 
-            <p><strong>11:30 – Natural History Museum</strong><br>
-            Prezzo: <span class="free">gratis</span><br>
-            Durata: 1h30</p>
+                <div class="timeline-item">
+                    <div class="timeline-time">11:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Spostamento verso South Kensington</h3>
+                        <p>Circle Line – <span class="price">£2.80</span></p>
+                    </div>
+                </div>
 
-            <p><strong>13:00 – Pranzo</strong><br>
-            Pret / Honest Burgers / Muriel’s Kitchen – <span class="price">£10–20</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">11:30</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Natural History Museum</h3>
+                        <p>Prezzo: <span class="free">gratis</span><br>
+                        Durata: 1h30</p>
+                    </div>
+                </div>
 
-            <p><strong>14:00 – Partenza per gli Studios</strong><br>
-            Metro South Kensington → Euston<br>
-            Treno Euston → Watford Junction – <span class="price">£12–15 A/R</span><br>
-            Shuttle bus ufficiale – <span class="price">£3 A/R</span><br>
-            Arrivo previsto: 15:30–15:45</p>
+                <div class="timeline-item">
+                    <div class="timeline-time">13:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Pranzo</h3>
+                        <p>Pret / Honest Burgers / Muriel’s Kitchen – <span class="price">£10–20</span></p>
+                    </div>
+                </div>
 
-            <p><strong>16:00 – Harry Potter Studios</strong><br>
-            Prezzo: <span class="price">£53–60</span><br>
-            Durata: 3–4 ore</p>
+                <div class="timeline-item">
+                    <div class="timeline-time">14:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Partenza per gli Studios</h3>
+                        <p>Treno Euston → Watford Junction – <span class="price">£12–15 A/R</span><br>
+                        Shuttle bus – <span class="price">£3 A/R</span></p>
+                    </div>
+                </div>
 
-            <p><strong>20:00 – Rientro a Londra</strong><br>
-            Arrivo: 21:00–21:30</p>
+                <div class="timeline-item">
+                    <div class="timeline-time">16:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Harry Potter Studios</h3>
+                        <p>Prezzo: <span class="price">£53–60</span><br>
+                        Durata: 3–4 ore</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
 
-        <!-- GIORNO 4 -->
-        <div class="day-box">
+        <!-- ===========================
+             GIORNO 4
+        ============================ -->
+        <div class="day-box" id="day4">
             <h2>🎸 Giorno 4 – Camden + Primrose Hill + ritorno</h2>
 
-            <p><strong>09:30 – Camden Town</strong><br>
-            Metro: Notting Hill Gate → Camden Town – <span class="price">£2.80</span><br>
-            Camden Market, Stables Market, Camden Lock<br>
-            Costo: <span class="free">gratis</span> (street food <span class="price">£8–12</span>)</p>
+            <div class="timeline">
 
-            <p><strong>12:00 – Primrose Hill</strong><br>
-            Vista panoramica su Londra<br>
-            Costo: <span class="free">gratis</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">09:30</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Camden Town</h3>
+                        <p>Metro: Notting Hill Gate → Camden Town – <span class="price">£2.80</span><br>
+                        Camden Market, Stables Market, Camden Lock<br>
+                        Costo: <span class="free">gratis</span> (street food <span class="price">£8–12</span>)</p>
+                    </div>
+                </div>
 
-            <p><strong>13:00 – Pranzo</strong><br>
-            Greenberry Café (<span class="price">£15–25</span>)<br>
-            The Engineer (<span class="price">£15–25</span>)<br>
-            Street food (<span class="price">£8–12</span>)</p>
+                <div class="timeline-item">
+                    <div class="timeline-time">12:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Primrose Hill</h3>
+                        <p>Vista panoramica su Londra<br>
+                        Costo: <span class="free">gratis</span></p>
+                    </div>
+                </div>
 
-            <p><strong>14:00 – Rientro in hotel</strong><br>
-            Recupero bagagli</p>
+                <div class="timeline-item">
+                    <div class="timeline-time">13:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Pranzo</h3>
+                        <p>Greenberry Café (<span class="price">£15–25</span>)<br>
+                        The Engineer (<span class="price">£15–25</span>)<br>
+                        Street food (<span class="price">£8–12</span>)</p>
+                    </div>
+                </div>
 
-            <p><strong>15:30–16:00 – Partenza verso Gatwick</strong><br>
-            Victoria → Gatwick Express – <span class="price">£20–25</span><br>
-            Thameslink – <span class="price">£10–13</span></p>
+                <div class="timeline-item">
+                    <div class="timeline-time">14:00</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Rientro in hotel</h3>
+                        <p>Recupero bagagli</p>
+                    </div>
+                </div>
 
-            <p><strong>16:30–17:00 – Arrivo in aeroporto</strong><br>
-            Perfetto per un volo delle 19:00</p>
+                <div class="timeline-item">
+                    <div class="timeline-time">15:30</div>
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Partenza verso Gatwick</h3>
+                        <p>Gatwick Express – <span class="price">£20–25</span><br>
+                        Thameslink – <span class="price">£10–13</span></p>
+                    </div>
+                </div>
+
+            </div>
         </div>
 
     </section>
 
+    <!-- FOOTER -->
+    <footer class="london-footer">
+        Designed with ❤️ in London Style
+    </footer>
 
 </body>
 </html>
