--- a/destinazioni/london.html
+++ b/destinazioni/london.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Londra – Itinerario</title>
 
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="londra.css">
+    <link rel="stylesheet" href="../navbar.css">
+    <link rel="stylesheet" href="london.css">
 </head>
 
 <body class="londra-body">
